[package]
name = "bvm"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6"
anyhow = "1.0"
futures-util = "0.3"
directories = "5.0"
tokio-util = { version = "0.7", features = ["io"] }
chrono = "0.4"
indicatif = "0.17"
regex = "1.10"
